--- a/overmij.html
+++ b/overmij.html
@@ -51,7 +51,7 @@
     <article>
         <h3 class="my-4"><b>Mijn werkervaring</b></h3>
         <ul class="list-group container-sm">
-            <li class="list-group-item list-group-item-info">2022-2023: Gemeente Almere: administratief medewerker ambtseed en salarisadministratie</li>
+            <li class="list-group-item list-group-item-info">2022-2023: Gemeente Almere: administratief medewerker ambtseed en verwerken van declaraties</li>
             <li class="list-group-item list-group-item-light">2020-2023: Vrijwilligerswerk Batavialand: gastvrouw/kassa</li>
             <li class="list-group-item list-group-item-info">2018-2019: Kwintes GGZ: planning en uitvoering van interne kwaliteitstoetsing</li>
             <li class="list-group-item list-group-item-light">2017-2018: Rijkswaterstaat: projectondersteuner</li>
