--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
     
     <form class="container-sm" id="contactformulier" action="https://formspree.io/f/xayrnaop" method="post">
         <div >
-            <label for="Naam" class="form-label">Uw naam</label>
+            <label for="naam" class="form-label">Uw naam</label>
             <input type="text" class="form-control" id="naam" name="naam" placeholder="Naam">
         </div>
         <div>
@@ -48,7 +48,7 @@
        </div>
         <div>
             <label for="bericht" class="form-label">Uw bericht</label>
-        <input type="textarea" class="form-control" id="bericht" name="bericht" maxlength="1500" placeholder="Bericht">
+        <textarea class="form-control" id="bericht" name="bericht" maxlength="1500" placeholder="Bericht"></textarea>
         </div>
       
         <button type="submit" class="btn btn-primary my-4">Submit</button>
